# restflow

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  SYSTEM_ARCHITECTURE.md  docker-compose.dev.yml  docker-compose.yml  vercel.json
backend/: .gitignore  Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/src/: api_response.rs  lib.rs  main.rs  python.rs  static_assets.rs
backend/src/api/: agents.rs  config.rs  mod.rs  python.rs  response.rs  secrets.rs  state.rs  tasks.rs  triggers.rs  workflows.rs
backend/src/core/: mod.rs  workflow.rs
backend/src/engine/: context.rs  executor.rs  graph.rs  mod.rs  scheduler.rs  trigger_manager.rs
backend/src/models/: mod.rs  node.rs  secrets.rs  task.rs  trigger.rs  workflow.rs
backend/src/node/: agent.rs  mod.rs  registry.rs  trigger.rs
backend/src/services/: agent.rs  config.rs  mod.rs  secrets.rs  task.rs  triggers.rs  workflow.rs
backend/src/storage/: agent.rs  config.rs  db.rs  mod.rs  queue.rs  secrets.rs  simple_queue.rs  task_queue.rs  trigger.rs  workflow.rs
backend/src/tools/: math_tools.rs  mod.rs  time_tool.rs
backend/tests/: export_bindings.rs
crates/restflow-ai/: Cargo.toml  pyproject.toml
crates/restflow-ai/assets/agents/: handoff_prompt.md
crates/restflow-ai/src/: error.rs  http_client.rs  lib.rs  security.rs  steer.rs  text_utils.rs
crates/restflow-ai/src/agent/: checkpoint.rs  context.rs  context_manager.rs  deferred.rs  definitions.rs  execution_engine.rs  executor.rs  history.rs  mod.rs  (+13 more)
crates/restflow-ai/tests/: agent_integration.rs  stress_context_manager.rs
crates/restflow-browser/: Cargo.toml
crates/restflow-browser/src/: lib.rs
crates/restflow-cli/: Cargo.toml  build.rs
crates/restflow-cli/man/: restflow-agent.1  restflow-auth.1  restflow-background-agent.1  restflow-chat.1  restflow-claude.1  restflow-codex.1  restflow-completions.1  restflow-config.1  restflow-daemon.1  restflow-deliverable.1  restflow-hook.1  restflow-info.1  restflow-key.1  restflow-maintenance.1  restflow-mcp.1  restflow-memory.1  restflow-migrate.1  restflow-note.1  restflow-pairing.1  restflow-restart.1  restflow-route.1  restflow-run.1  restflow-secret.1  restflow-security.1  restflow-session.1  restflow-shared.1  restflow-skill.1  restflow-start.1  restflow-status.1  restflow-stop.1  restflow-task.1  restflow-team.1  restflow-trigger.1  restflow-ui.1  restflow-upgrade.1  restflow.1
crates/restflow-cli/src/: cli.rs  completions.rs  error.rs  main.rs  prompts.rs  setup.rs  test_support.rs
crates/restflow-cli/tests/: cli.rs  cron_scheduling.rs  hook_daemon.rs  mcp_daemon.rs
crates/restflow-contracts/: Cargo.toml
crates/restflow-contracts/src/: error.rs  lib.rs  operation.rs  response.rs  stream.rs  tool.rs
crates/restflow-core/: Cargo.toml
crates/restflow-core/assets/: default_agent.md
crates/restflow-core/src/: features.rs  lib.rs  paths.rs  prompt_files.rs  python.rs  skill_files.rs  steer.rs  template.rs
crates/restflow-core/tests/: stress_mock_runtime.rs
crates/restflow-desktop/: .gitignore  Cargo.toml  tauri.conf.json
crates/restflow-desktop/scripts/: ensure-frontend-build.js
crates/restflow-desktop/src/: main.rs
crates/restflow-models/: Cargo.toml
crates/restflow-models/src/: lib.rs  model_id.rs  model_metadata.rs  provider.rs  provider_meta.rs  selector.rs
crates/restflow-runtime/: Cargo.toml
crates/restflow-runtime/src/: lib.rs  python.rs
crates/restflow-sandbox/: Cargo.toml
crates/restflow-sandbox/src/: error.rs  lib.rs  linux.rs  macos.rs  windows.rs
crates/restflow-sandbox/tests/: sandbox_tests.rs
crates/restflow-server/: .gitignore  Cargo.toml
crates/restflow-server/src/: config.rs  daemon_client.rs  main.rs  proxy.rs  static_assets.rs  ws_proxy.rs
crates/restflow-server/tests/: export_bindings.rs
crates/restflow-storage/: Cargo.toml
crates/restflow-storage/src/: agent.rs  agent_meta.rs  agent_task.rs  audit.rs  auth_profiles.rs  background_agent.rs  channel_session_binding.rs  chat_execution_event.rs  chat_session.rs  checkpoint.rs  config.rs  daemon_state.rs  deliverable.rs  encryption.rs  execution_history.rs  execution_trace.rs  keychain.rs  kv_store.rs  lib.rs  memory.rs  memory_index.rs  pairing.rs  paths.rs  provider_health_snapshot.rs  range_utils.rs  secrets.rs  security_amendment.rs  shared_space.rs  simple_storage.rs  skill.rs  skill_meta.rs  structured_execution_log.rs  task_queue.rs  telemetry_metric_sample.rs  terminal_session.rs  time_utils.rs  tool_trace.rs  trigger.rs  vector.rs  work_item.rs  (+2 more)
crates/restflow-tauri/: Cargo.toml  Info.plist  tauri.conf.json
crates/restflow-tauri/capabilities/: default.json
crates/restflow-tauri/icons/: icon.icns
crates/restflow-tauri/src/: daemon_manager.rs  error.rs  executor.rs  ipc_bindings.rs  ipc_command_coverage.baseline.txt  lib.rs  main.rs  state.rs
crates/restflow-telemetry/: Cargo.toml
crates/restflow-telemetry/src/: lib.rs  run_lifecycle.rs
crates/restflow-tools/: Cargo.toml
crates/restflow-tools/src/: error.rs  http_client.rs  lib.rs  registry.rs  tool.rs  toolset.rs  wrapper.rs
crates/restflow-tools/tests/: agent_integration.rs  spawn_subagent_batch.rs  subagent_lifecycle.rs
crates/restflow-traits/: Cargo.toml
crates/restflow-traits/src/: assessment.rs  batch_template.rs  cache.rs  config_types.rs  defaults.rs  error.rs  filtered.rs  http_client.rs  lib.rs  llm.rs  model.rs  network.rs  orchestrator.rs  registry.rs  security.rs  skill.rs  steer.rs  store.rs  subagent.rs  team.rs  text.rs  tool.rs  toolset.rs  wrapper.rs
crates/restflow-tui/: Cargo.toml
crates/restflow-tui/src/: app.rs  composer.rs  controller.rs  daemon_client.rs  event_loop.rs  lib.rs  reducer.rs  render.rs  state.rs  transcript.rs
python/: .gitignore  pyproject.toml
python/restflow_ai/: __init__.py  agent.py  decorators.py  eval.py  parser.py  workflow_def.py
python/scripts/: __init__.py
python/scripts/templates/: index.json  langgraph_multi_agent.py  langgraph_react_agent.py  langgraph_simple.py
(+1687 files in other folders)
