[workspace]
members = [
    "crates/restflow-storage",
    "crates/restflow-workflow",
    "crates/restflow-server",
    "crates/restflow-cli",
    "crates/restflow-ai",
]
resolver = "2"

# Default to running server
default-members = ["crates/restflow-server", "crates/restflow-workflow"]

[workspace.package]
version = "0.1.0"
authors = ["RestFlow Team"]
edition = "2024"

[workspace.dependencies]
restflow-storage = { path = "crates/restflow-storage" }
restflow-workflow = { path = "crates/restflow-workflow" }
restflow-ai = { path = "crates/restflow-ai" }
anyhow = "1.0.100"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = "0.4.42"
tracing = "0.1"

[profile.release]
# Optimize release builds
lto = true
opt-level = "z"
codegen-units = 1
strip = true
