[workspace]
members = [
    "crates/restflow-traits",
    "crates/restflow-storage",
    "crates/restflow-core",
    "crates/restflow-cli",
    "crates/restflow-ai",
    "crates/restflow-tools",
    "crates/restflow-browser",
    "crates/restflow-tauri",
    "crates/restflow-sandbox",
]
resolver = "2"

# Default to running core (tauri later)
default-members = ["crates/restflow-core"]

[workspace.package]
version = "0.3.5"
authors = ["RestFlow Team"]
edition = "2024"

[workspace.dependencies]
restflow-traits = { path = "crates/restflow-traits" }
restflow-storage = { path = "crates/restflow-storage" }
restflow-core = { path = "crates/restflow-core" }
restflow-ai = { path = "crates/restflow-ai" }
restflow-tools = { path = "crates/restflow-tools" }
restflow-browser = { path = "crates/restflow-browser" }
restflow-sandbox = { path = "crates/restflow-sandbox" }
monty = { git = "https://github.com/pydantic/monty", tag = "v0.0.7" }
anyhow = "1.0.101"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = "0.4.42"
tracing = "0.1"

[profile.release]
# Optimize release builds
lto = true
opt-level = "z"
codegen-units = 1
strip = true
