[project]
name = "restflow-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "llama-index>=0.11.0",
    "llama-index-llms-openai>=0.2.0",
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.7.0",
]

[tool.uv]
managed = true
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py312"