[package]
name = "restflow-ai"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Rust-powered AI Agent framework with ReAct loop"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Workspace dependencies
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true

# AI-specific dependencies
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "stream"] }
regex = "1.11"
sha2 = "0.10.9"
hex = "0.4"
once_cell = "1.20"
lsp-types = "0.97"

# PyO3 for Python bindings (optional)
pyo3 = { version = "0.28.0", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[lints.rust]
dead_code = "allow"

[dev-dependencies]
tempfile = "3.19"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
