[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "restflow-ai"
version = "0.1.0"
description = "Rust-powered AI Agent framework with Python SDK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agent", "workflow", "llm", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/restflow/restflow"
Repository = "https://github.com/restflow/restflow"

[tool.maturin]
features = ["python"]
python-source = "../../python"
module-name = "restflow_ai._native"
