[package]
name = "restflow-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "restflow"
path = "src/main.rs"

[dependencies]
# Core
restflow-core = { workspace = true }
restflow-ai = { workspace = true }
restflow-tauri = { path = "../restflow-tauri" }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"

rpassword = "7.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
colored = "2.1"
comfy-table = "7"
indicatif = "0.17"

# Config
toml = "0.8"
dirs = "6"

# TUI
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"
syntect = "5"

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
redb = "3.1"
