[package]
name = "restflow-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "restflow"
path = "src/main.rs"

[dependencies]
# Core
restflow-core = { workspace = true }
restflow-ai = { workspace = true }
restflow-storage = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"

rpassword = "7.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
colored = "3.1"
comfy-table = "7"
indicatif = "0.18"

# Config
toml = "0.9"
dirs = "6"
reqwest = { version = "0.13", features = ["json"] }
flate2 = "1.1"
tar = "0.4"
zip = "7.2.0"
walkdir = "2"

# Database
redb = "3.1"

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process"] }

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
redb = "3.1"
