[package]
name = "restflow-contracts"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Shared transport and boundary contracts for RestFlow"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { version = "=2.0.0-rc.23", features = ["derive"] }
ts-rs = "12.0"
