[package]
name = "restflow-core"
version.workspace = true
edition.workspace = true

[lib]
name = "restflow_core"
path = "src/lib.rs"

[features]
default = []
keychain = ["keyring"]

[dependencies]
keyring = { version = "3.6", optional = true, features = ["apple-native"] }
# Internal dependencies
restflow-ai = { path = "../restflow-ai" }
restflow-storage = { path = "../restflow-storage" }

# External dependencies
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = "0.4.42"
chrono-tz = "0.10"
cron = "0.15"
dirs = "6.0.0"
dashmap = "6.1.0"
flate2 = "1.1.4"
futures = "0.3"
hex = "0.4.3"
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1-native-tls"] }
once_cell = "1.21.3"
petgraph = "0.8"
portable-pty = "0.8"
redb = "3.1.0"
regex = "1.11.1"
reqwest = { version = "0.13.1", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9"
sha2 = "0.10.9"
glob-match = "0.2"
shell-words = "1.1"
which = "6"
tar = "0.4.44"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9"
tokio-cron-scheduler = "0.15.1"
tokio-stream = "0.1"
tracing = "0.1"
ts-rs = { version = "11.0", features = ["chrono-impl"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
walkdir = "2"
zip = "7.2.0"
urlencoding = "2.1.3"
