[package]
name = "restflow-core"
version.workspace = true
edition.workspace = true

[lib]
name = "restflow_core"
path = "src/lib.rs"

[features]
default = []
keychain = ["keyring"]
test-utils = []

[dependencies]
keyring = { version = "3.6", optional = true, features = ["apple-native"] }
# Internal dependencies
restflow-contracts = { workspace = true }
restflow-traits = { workspace = true, features = ["ts"] }
restflow-telemetry = { workspace = true }
restflow-ai = { path = "../restflow-ai" }
restflow-tools = { workspace = true }
restflow-storage = { path = "../restflow-storage" }

# External dependencies
anyhow = "1.0.101"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["json"] }
base64 = "0.22.1"
chrono = "0.4.44"
chrono-tz = "0.10"
cron = "0.15"
crossbeam-queue = "0.3"
dirs = "6.0.0"
dashmap = "6.1.0"
bytes = "1.10"
futures = "0.3"
http = "1.3"
http-body = "1.0"
http-body-util = "0.1.3"
hyper = { version = "1.7", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "service", "tokio"] }
hex = "0.4.3"
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1-native-tls"] }
num_cpus = "1.16"
parking_lot = "0.12"
petgraph = "0.8"
rand = "0.10"
portable-pty = "0.9"
redb = "3.1.0"
regex = "1.11.1"
rmcp = { version = "0.14", features = ["client", "server", "transport-streamable-http-server"] }
schemars = "1.2"
lsp-types = "0.97"
notify = "8.2"
url = "2.5"
reqwest = { version = "0.13.2", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9"
specta = { version = "=2.0.0-rc.22", features = ["derive", "chrono", "uuid", "serde_json"] }
sha2 = "0.10.9"
glob-match = "0.2"
shell-words = "1.1"
which = "8"
tempfile = "3.25.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
scopeguard = "1"
tokio-util = "0.7"
toml = "1.0"
tokio-cron-scheduler = "0.15.1"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.28", features = ["connect", "rustls-tls-webpki-roots"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1"
ts-rs = { version = "12.0", features = ["chrono-impl"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
walkdir = "2"
urlencoding = "2.1.3"
zip = "6.0.0"

[dev-dependencies]
filetime = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }
