[package]
name = "restflow-desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RestFlow - Visual workflow automation with AI agents"
license = "Apache-2.0"
repository = "https://github.com/lhwzds/restflow"
rust-version = "1.85"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
restflow-core = { workspace = true }
tauri.workspace = true
tauri-plugin-log = "2.7.1"
tauri-plugin-shell = "2.3.1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
anyhow.workspace = true
log = "0.4.28"
