[package]
name = "restflow-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Shared runtime infrastructure for RestFlow"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true

# Datetime with serde support
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = "0.12.22"

# Python execution
sha2 = "0.10"
flate2 = "1.1"
tar = "0.4"
dirs = "6.0"
hex = "0.4.3"
zip = "6.0.0"
tempfile = "3.23.0"
once_cell = "1.21.3"
regex = "1.11.1"

# AI tools
rig-core = "0.24.0"

# Error handling
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.19"
