[package]
name = "restflow-sandbox"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Minimal cross-platform OS sandbox for RestFlow command execution"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
thiserror = "2.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
landlock = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
