[package]
name = "restflow-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "restflow-server"
path = "src/main.rs"

[dependencies]
restflow-core = { workspace = true }
axum = { version = "0.8.4", features = ["macros"] }
mime_guess = "2.0.5"
mimalloc = { version = "0.1", default-features = false }
rust-embed = { version = "8.7.2", features = ["include-exclude", "interpolate-folder-path"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.12.0"
