[package]
name = "restflow-storage"
version.workspace = true
edition.workspace = true

[lib]
name = "restflow_storage"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
chrono.workspace = true
uuid.workspace = true
redb = "3.1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
ts-rs = "11.0"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.23.0"
