[package]
name = "restflow-tauri"
version.workspace = true
edition.workspace = true

[lib]
name = "restflow_tauri_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "restflow-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Internal dependencies
restflow-core = { path = "../restflow-core" }
restflow-storage = { path = "../restflow-storage" }
restflow-ai = { path = "../restflow-ai" }

# Tauri
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# PTY support
portable-pty = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# Async traits
async-trait = "0.1"

# UUID for unique session IDs
uuid = { version = "1.11", features = ["v4"] }

# MCP (Model Context Protocol) server
rmcp = { version = "0.8", features = ["server"] }
schemars = "0.8"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Directory utilities for MCP mode
dirs = "6"

[dev-dependencies]
tempfile = "3"
redb = "3.1"

[features]
# This feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]
