[package]
name = "restflow-tauri"
version.workspace = true
edition.workspace = true

[lib]
name = "restflow_tauri_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "restflow-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Internal dependencies
restflow-core = { path = "../restflow-core" }
restflow-storage = { path = "../restflow-storage" }
restflow-ai = { path = "../restflow-ai" }

# Tauri
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"

# Concurrent data structures
dashmap = "6"

# PTY support
portable-pty = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TypeScript bindings
ts-rs = "11.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# Async traits
async-trait = "0.1"

# UUID for unique session IDs
uuid = { version = "1.11", features = ["v4"] }

# HTTP client for tools
reqwest = { version = "0.12", features = ["json"] }

# HTTP server for webhooks
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# MCP (Model Context Protocol) server
rmcp = { version = "0.14", features = ["server"] }
schemars = "0.8"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Directory utilities for MCP mode
dirs = "6"
tauri-plugin-decorum = "1.1.1"

[dev-dependencies]
tempfile = "3"
redb = "3.1"
tower = { version = "0.5", features = ["util"] }

[features]
# This feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]
