[package]
name = "restflow-telemetry"
version.workspace = true
edition.workspace = true

[lib]
name = "restflow_telemetry"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
