[package]
name = "restflow-telemetry"
version.workspace = true
edition.workspace = true

[lib]
name = "restflow_telemetry"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
regex = "1.11.1"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
