[package]
name = "restflow-traits"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Shared trait definitions and core abstractions for RestFlow"

[dependencies]
# Workspace dependencies
async-trait.workspace = true
restflow-contracts.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true

# Crate-specific
thiserror = "2.0"
url = "2.5"
lsp-types = "0.97"
reqwest = { version = "0.13.2", features = ["json", "stream", "multipart"], optional = true }
ts-rs = { version = "12.0", optional = true }
specta = { version = "=2.0.0-rc.22", features = ["derive"], optional = true }

[features]
default = []
http-client = ["dep:reqwest"]
ts = ["dep:ts-rs"]
specta = ["dep:specta"]

[lints.rust]
dead_code = "allow"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
