[package]
name = "restflow-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
restflow-contracts = { workspace = true }
restflow-core = { workspace = true }
restflow-traits = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
crossterm = "0.28"
ratatui = "0.29"

